Complete initial home page structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@
 
 :root {
     --orange-color: #da8b24;
+    --dark-orange-color: #ad752a;
     --black-color: #0a0a0a;
+    --white-color: #e4e1e1;
 }
 
 body {
@@ -21,4 +23,29 @@ body {
 
 .black-color-text {
     color: var(--black-color);
+}
+
+.btn-custom-orange {
+    background-color: var(--orange-color);
+    color: var(--black-color);
+}
+
+.btn-custom-orange:hover {
+    background-color: var(--dark-orange-color);
+}
+
+.white-color-text {
+    color: var(--white-color);
+}
+
+.main-heading {
+    font-size: 10vw;
+    text-align: center;
+    padding-top: 12vw;
+    padding-bottom: 12vw;
+}
+
+.background {
+    background: url('../images/background_720.webp') no-repeat center center;
+    background-size: cover;
 }
