--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,9 @@ body {
     background: url('../images/background_720.webp') no-repeat center center;
     background-size: cover;
 }
+
+.footer-links {
+    font-size: 12px;
+    text-decoration: none;
+    color: inherit;
+}
