--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     overflow-x: hidden;
 }
 
+/* used for potions and ingredients that has current 0 value */
 .greyscaled-image {
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
