--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,10 @@ body {
     background-size: contain;
 }
 
+#game-board{
+    touch-action: none;
+}
+
 .recipes-btn, .rules-btn {
     width: 120px;
 }
