--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -14,10 +14,6 @@
     justify-content: space-around;
 }
 
-.cauldron {
-    display: contents;
-}
-
 .card {
     background: transparent;
     display: flex;
@@ -28,12 +24,27 @@
     color: #eca72c;
 }
 
-.card-img-top {
-    width: 300px;
+.card-img-bottom {
+    width: 110%;
 }
 
-.cauldron-card {
-    width: 150px;
+/* Stats */
+.card-header {
+    max-width: 15rem;
+}
+.player-stats-section, .enemy-stats-section {
+    background: url('../images/general/frame_stats.png') no-repeat center center;
+    background-size: cover;
+}
+
+.progress {
+    --bs-progress-bg: transparent;
+    --bs-progress-height: 0.8rem;
+    --bs-progress-font-size: 0.55rem;
+    border: 0.5px solid rgba(137, 133, 133, 0.311);
+}
+.progress-bar {
+    border-radius: 10px;
 }
 
 .recipes-btn,
