--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -5,6 +5,7 @@ body {
     background: url('../images/background_720.webp') no-repeat center center;
     background-size: cover;
 }
+
 #game-board {
     --bs-gutter-x: 0;
     display: flex;
@@ -18,6 +19,7 @@ body {
     justify-content: center;
     border: none;
 }
+
 .card-title {
     color: #eca72c;
 }
@@ -30,7 +32,9 @@ body {
 .card-header {
     max-width: 15rem;
 }
-.player-stats-section, .villain-stats-section {
+
+.player-stats-section,
+.villain-stats-section {
     background: url('../images/general/frame_stats.png') no-repeat center center;
     background-size: cover;
 }
@@ -41,6 +45,7 @@ body {
     --bs-progress-font-size: 0.55rem;
     border: 0.5px solid rgba(137, 133, 133, 0.311);
 }
+
 .progress-bar {
     border-radius: 10px;
 }
@@ -59,7 +64,8 @@ body {
     display: block;
 }
 
-.grabbable, .potion-img:hover {
+.grabbable,
+.potion-img:hover {
     cursor: grab;
 }
 
@@ -84,26 +90,46 @@ body {
     border-radius: 50%;
     font-size: 16px;
     border: 1px solid black;
-  }
+}
 
 /* Navigation menu */
 
-.menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../images/general/frame_cauldron_content.png);
-    background-size: 150px;
-    width: 150px;
-    height: 150px;
+.btn {
+    background: none;
+    border: none;
+}
+.btn:hover {
+    color: #eca72c;
+    background: none;
+    border: none;
 }
 
-.icon {
-    list-style-image: url(../images/general/spooky-meme.gif);
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+    background: none;
+    border: none;
+}
+.dropdown {
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown-menu.show{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../images/general/frame_stats.png);
+    background-size: 172px;
+    border: none;
+    width: 171px;
+    height: 82px;
+    --bs-dropdown-bg: none;
 }
 
 .menu_icon {
+    display: flex;
+    flex-direction: column;
     color: var(--black-color);
     text-decoration: none;
+    margin-bottom: 10px;
 }
-
