Work on kitchen

--- a/assets/css/new-kitchen.css
+++ b/assets/css/new-kitchen.css
@@ -48,6 +48,7 @@ body{
     align-items: center;
     flex-wrap: wrap;
     padding: 3rem;
+    position: relative;
 }
 
 #recipie-ingredients-container{
