solved overflow bug

--- a/assets/css/new-kitchen.css
+++ b/assets/css/new-kitchen.css
@@ -23,6 +23,7 @@ body{
     background-size: cover;
     height: 100vh;
     width: 100vw;
+    position: relative;
 }
 
 #recipie-ingredients-img{
@@ -62,6 +63,10 @@ body{
     justify-content: center;
     align-items: center;
     padding: 0.5rem;
+}
+
+.ingredients-list-column{
+    overflow: visible;
 }
 
 
@@ -213,6 +218,15 @@ body{
 .ingredient-container {
   padding: 3px;
   width: 5rem; 
+  background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 2;
+    position: relative;
+}
+.ingredient{
+     background-repeat: no-repeat;
+    z-index: 10000;
+    position: relative;
 }
 
 
