--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -171,3 +171,14 @@ body {
     background: linear-gradient(0deg, rgba(116, 13, 121, 0.863) 0%, rgba(198, 147, 35, 0.877) 100%);
     color: #ffffff;
 }
+
+.player:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: transform 0.3s;
+}
+
+.player img {
+    /* object shadow */
+    filter: drop-shadow(0px 0px 10px rgba(215, 149, 8, 0.687));
+}
